Fix: menu overflowing on mobile (caused by previous commit setting height 1px)

--- a/_gulped-sass/_components/_nav.scss
+++ b/_gulped-sass/_components/_nav.scss
@@ -27,7 +27,7 @@ nav {
 		-webkit-box-align: center;
 		    -ms-flex-align: center;
 		        align-items: center;
-		height: 1px; /* overridden by min-height elsewhere, but fixes bug in IE11
+		height: 48px; /* Fixes bug in IE11
 		                http://stackoverflow.com/questions/19371626/flexbox-not-centering-vertically-in-ie */
 	}	
 }
