--- a/_sass/_components/_nav.scss
+++ b/_sass/_components/_nav.scss
@@ -13,7 +13,7 @@ nav {
 	a {
 		display: flex;
 		align-items: center;
-		height: 1px; /* overridden by min-height elsewhere, but fixes bug in IE11
+		height: 48px; /* Fixes bug in IE11
 		                http://stackoverflow.com/questions/19371626/flexbox-not-centering-vertically-in-ie */
 	}	
 }
